--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
 disqus: adrienbrunet
+google_analytics: UA-42192634-5
 gems:
   - jemoji
 defaults:
