--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ highlighter: rouge
 markdown: kramdown
 disqus: adrienbrunet
 google_analytics: UA-42192634-5
+title: blog.adrienbrunet.com
 gems:
   - jemoji
 defaults:
